[package]
name = "debugger"
version = "0.1.0"
authors = ["Zac Ecob <21zecob@covenant.nsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.22.0"
rustyline = "8.2.0"
linux-personality = "1.0"
libc = "0.2"
object="0.26.1"
gimli="0.20.0"
fallible-iterator = "0.2.0"
serde_json = "1.0"
serde = "1.0.130"
serde_derive="1.0.130"
